--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,3 +44,5 @@ jobs:
           curl -F package=@$filename https://${FURY_TOKEN}@push.fury.io/ysicing/
           curl -F package=@$filename https://${FURY_TOKEN}@push.fury.io/ysicing/
         done
+
+    - run: ./gen.sh
