--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ jobs:
     - name: Setup Go
       uses: actions/setup-go@v5
       with:
+        check-latest: true
         go-version: 1.21.x
     - name: Cache Go Dependencies
       uses: magnetikonline/action-golang-cache@v4
